add pokemon legend arceus game link

--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
                                 alt="Imagem do jogo Teamfight Tatics">
                             </a>
                         </li>
+
+                        <li>
+                            <a 
+                            target="_blank"
+                            href="https://www.twitch.tv/directory/game/Pokémon%20Legends%3A%20Arceus">
+                                <img 
+                                src="https://static-cdn.jtvnw.net/ttv-boxart/561013832_IGDB-188x250.jpg" 
+                                alt="Imagem do jogo Pokémon Legends: Arceus">
+                            </a>
+                        </li>
+
                     </ul>
                 </div>
             </section>
